--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,3 +9,9 @@ dependencies = [
     "lxml>=6.0.2",
     "pydantic>=2.11.9",
 ]
+
+[project.optional-dependencies]
+codegen = [
+    "lxml>=6.0.2",
+    "jinja2>=3.1.4",
+]
